Update FE